# Visual-Deep-Learning

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
attention/: __init__.py  plot.py  rollout.py
attention/examples/: basic.py
embedding_drift/: __init__.py  align.py  plot.py
embedding_drift/examples/: basic.py
lib/: __init__.py  io.py  smooth.py  theme.py
loss_curve/: __init__.py  plot.py
loss_curve/examples/: basic.py
tests/: test_io.py  test_rollout.py  test_smooth.py  test_theme.py
tsne/: __init__.py  plot.py
tsne/examples/: basic.py
umap_viz/: __init__.py  plot.py
umap_viz/examples/: basic.py
